[package]
name = "redis-mod"
version = "0.0.1"
authors = ["utsugi yuta <yutautsugi@outlook.com>"]
edition = "2018"
build = "build.rs"
description = "A Redis module that provides rate limiting in Redis as a single command."
license = "MIT"

[lib]
crate-type = ["dylib"]

[dependencies]
bitflags = "1.0"
libc = "0.2.0"
time = "0.1"
bytes = "0.4"
zstd = "0.4"

[build-dependencies]
gcc = "0.3"

