[package]
name = "redis-mod"
version = "0.0.1"
authors = ["utsugi yuta <yutautsugi@outlook.com>"]
edition = "2018"
build = "build.rs"
description = "yaho"
license = "MIT"
repository = "https://github.com/brandur/redis-cell"

[lib]
crate-type = ["dylib"]

[dependencies]
bitflags = "1.0"
libc = "0.2.0"
time = "0.1"

[build-dependencies]
gcc = "0.3"

